@@ -1,3 +1,7 @@
+2008-05-11 Lars Uebernickel <larsuebernickel@gmx.de>
+	* pdf backend: removed poppler dependency, process pdfs with libgs
+	now. Changed the buildsystem to reflect this.
+
 2008-04-23 Lars Uebernickel <larsuebernickel@gmx.de>
 
 	* foomatic-rip.c, configure.ac: Compose the current version out of the
